Replace String.formatted()