@@ -81,7 +81,7 @@ public class SecurityTestsUtils {
                     + "] is unauthorized for user ["
                     + authenticatingUser.principal()
                     + "]"
-                    + " with effective roles [%s]".formatted(Strings.arrayToCommaDelimitedString(authenticatingUser.roles()))
+                    + String.format(java.util.Locale.ROOT, " with effective roles [%s]", Strings.arrayToCommaDelimitedString(authenticatingUser.roles()))
                     + ", because user ["
                     + authenticatingUser.principal()
                     + "] is unauthorized to run as ["
