@@ -53,7 +53,7 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
 
         assertThat(
             rolesDescription,
-            equalTo(" with assigned roles [%s]".formatted(Strings.collectionToCommaDelimitedString(assignedRoleNames)))
+            equalTo(String.format(java.util.Locale.ROOT, " with assigned roles [%s]", Strings.collectionToCommaDelimitedString(assignedRoleNames)))
         );
     }
 
@@ -73,7 +73,7 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
 
         assertThat(
             rolesDescription,
-            equalTo(" with assigned roles [%s]".formatted(Strings.collectionToCommaDelimitedString(assignedRoleNames)))
+            equalTo(String.format(java.util.Locale.ROOT, " with assigned roles [%s]", Strings.collectionToCommaDelimitedString(assignedRoleNames)))
         );
     }
 
@@ -104,7 +104,7 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
 
         assertThat(
             rolesDescription,
-            equalTo(" with assigned roles [%s]".formatted(Strings.collectionToCommaDelimitedString(assignedRoleNames)))
+            equalTo(String.format(java.util.Locale.ROOT, " with assigned roles [%s]", Strings.collectionToCommaDelimitedString(assignedRoleNames)))
         );
     }
 
@@ -129,9 +129,7 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
             assertThat(
                 rolesDescription,
                 equalTo(
-                    " with effective roles [] (assigned roles [%s] were not found)".formatted(
-                        Strings.collectionToCommaDelimitedString(assignedRoleNames.stream().sorted().toList())
-                    )
+                    String.format(java.util.Locale.ROOT, " with effective roles [] (assigned roles [%s] were not found)", Strings.collectionToCommaDelimitedString(assignedRoleNames.stream().sorted().toList()))
                 )
             );
         }
@@ -162,9 +160,7 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
         assertThat(
             rolesDescription,
             equalTo(
-                " with effective roles [%s]".formatted(
-                    Strings.collectionToCommaDelimitedString(effectiveRoleNames.stream().sorted().toList())
-                )
+                String.format(java.util.Locale.ROOT, " with effective roles [%s]", Strings.collectionToCommaDelimitedString(effectiveRoleNames.stream().sorted().toList()))
             )
         );
     }
